examples/negative/type_errors/L1/10_div_int_bool.ob
MODULE DivIntBool;

VAR i: INTEGER;
    b: BOOLEAN;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  i := 42;
  b := TRUE;
  i := i DIV b; ok := TRUE;
END DivIntBool.
